# py-todoist

./: README.md  pyproject.toml
src/todo/: __init__.py  app.css  app.py  store.py
